--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container">
         <h1>BlurShield Privacy Policy</h1>
-        <p class="last-updated">Last Updated: [DATE]</p>
+        <p class="last-updated">Last Updated: August 28, 2025</p>
 
         <h2>1. Information We Collect</h2>
         <p>BlurShield is designed with privacy in mind. We collect minimal information necessary to provide our service:</p>
@@ -95,7 +95,7 @@
         <p>If you have questions about this privacy policy, please contact us at:</p>
         <ul>
             <li>Email: Bakharlabs@gmail.com</li>
-            <li>Website: https://github.com/bakharlabs/BlurShield-Chrome-Extension.git</li>
+            <li>Website: github.com/bakharlabs/BlurShield-Chrome-Extension.git</li>
         </ul>
 
         <h2>10. Compliance</h2>
